Fix(tests): change entity tests so that they reflect new approach with roles pre-charged in the database